--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -171,6 +171,7 @@ p.top-title{
   background-position: right bottom;
   background-size: 210% 100%;
   color: var(--white);
+
 }
 .btn-yellow:hover{
   background-position: left bottom;
@@ -217,7 +218,7 @@ a.nav-link:hover::before{
   position: absolute;
   left: 50%;
   top: 30px;
-  max-width: 545px;
+  /*max-width: 545px;*/
   transform: translateX(-50%);
   z-index: -1;
 }
@@ -290,7 +291,9 @@ a.nav-link:hover::before{
 }
 
 /*recent work*/
-.content-box{min-width: 500px;margin-top: 100px;padding-right: 55px;padding-left: 70px;}
+.content-box{
+  /*min-width: 500px;*/
+  margin-top: 100px;padding-right: 55px;padding-left: 70px;}
 .content-box h2{
   font-size: 30px;
   line-height: 38px;
