--- a/asset/css/media.css
+++ b/asset/css/media.css
@@ -3,6 +3,7 @@
   .section-title{
     font-size: 30px;
   }
+  .banner-page{height: auto;padding-top: 0}
   .section-heading{margin-bottom: 40px;}
   .banner-row-left{
     margin: 0 auto !important;
@@ -25,10 +26,13 @@
   .contact-address ul li:not(:last-child){margin-bottom: 10px;}
 
   .features-box{margin-bottom: 30px;}
-  .about-img-bg{display: none;}
   .about-img-1{margin-bottom: 20px;}
   .about-group-img h3{font-size: 30px;line-height: 40px;}
-  .figure-img{display: none;}
+  .figure-img{margin-bottom: 20px;}
+  .mt-sm-4{margin-top: 20px;}
+  .top-img{text-align: center;}
+
+
   .banner-page .section-title{
     font-size: 40px;
   }
@@ -40,24 +44,27 @@
   .our-team .section-heading{text-align: center !important;}
   #testimonial{margin-top:30px;}
   .carousel-item{text-align: center;}
-  .test_btn{bottom: -114%;top:0;}
+  .test_btn{bottom: -105%;top:0;}
 .c_item{margin-bottom: 30px;}
 .contact-page .section-heading{text-align: center;
   }
     .w-count{
-    font-size: 18px;
+    /*font-size: 18px;*/
     line-height: 22px;
+    justify-content: center;
   }
 
   .mb-sm-4{margin-bottom: 30px;}
   span.counter-count{font-size: 35px;margin-right: 10px;}
   .recent-work {margin-bottom: 50px;}
-  
+  .contact-form .form-control{margin-bottom: 15px;}
+  .mxl-btm{margin-bottom: 30px !important;}
 }
 
 /* Small devices (landscape phones, 576px and up)*/
 @media (min-width: 576px) and (max-width: 767.98px) {
-  .figure-img{display: none;}
+  /*.figure-img{display: none;}*/
+  .banner-page{height: auto;}
   .single-person{
     margin-bottom:  30px;
   }
@@ -66,7 +73,7 @@
     line-height: 22px;
   }
   span.counter-count{font-size: 40px;margin-right: 10px;}
-  section{padding-bottom: 0;padding-top: 50px;}
+  section{padding-bottom: 40;padding-top: 50px;}
   .section-heading{margin-bottom: 40px;}
   .our-team .section-heading{text-align: center !important;}
   #testimonial{margin-top:30px;}
@@ -80,7 +87,9 @@
 
   .features-box{margin-bottom: 30px;}
   .about-group-img h3{font-size: 35px;line-height: 45px;}
-  .about-img-bg{display: none;}
+  .about-img-bg{}
+  .about-img-1 {width: 100%;margin-bottom: 20px;}
+  .about-img-2{width: 100%;}
   .banner-page .section-title{
     font-size: 45px;
   }
@@ -90,8 +99,15 @@
       padding-left: 20px;
   }
   .c_item{margin-bottom: 30px;}
+  .c_img img{width: 100%}
   .contact-page .section-heading{text-align: center;
-}
+  }
+  .section-title{font-size: 30px;}
+  .contact-address ul li:not(:last-child){
+    margin-bottom: 16px;
+  }
+  .contact-form .form-control{margin-bottom: 15px;}
+  .about-img-1{margin-bottom: 15px;}
 .recent-work{margin-bottom: 50px;}
 }
 
